# CXX_playground

./: CMakeLists.txt  README.md
data/slambook/ch6/: runs.csv
eigen/: CMakeLists.txt
slambook/: CMakeLists.txt
slambook/ch2/: CMakeLists.txt  helloSlambook.cpp  libHelloSlambook.cpp  libHelloSlambook.h  useHello.cpp
slambook/ch3/: CMakeLists.txt  eigenMatrix.cpp  useGeometry.cpp
slambook/ch4/: CMakeLists.txt  useSophus.cpp
slambook/ch5/: CMakeLists.txt  imageBasics.cpp  joinMap.cpp
slambook/ch6/: CMakeLists.txt  ceres_curve_fitting.cpp  ceres_dk.cpp  ceres_exercice.cpp  g2o_curve_fitting.cpp  g2o_exercice.cpp
src/eigen/: play1.cpp
